# mini-yolov3

./: .gitignore  README.md  asdf.ipynb  dataset.ipynb  index.ipynb  pyproject.toml  test.ipynb  train copy 2.ipynb  train copy.ipynb  train.ipynb
configs/: experiment.json  experiment2.json  smol.json  test.json
mini_yolov1/: evals.py  loss.py  model.py  trainer.py  utils.py
mini_yolov1/dataset/: __init__.py  base.py  oxfordpet.py
mini_yolov3/: __init__.py  dataset.py  evals.py  inference.py  loss.py  model.py  model_output.py  trainer.py  utils.py
mini_yolov3/dataset/: __init__.py  base.py  oxfordpet.py  svhn.py
notebooks/: model.ipynb
scripts/: detect.py  detect.sh  download_oxfordiiit_pet.sh  find_anchors.py  find_anchors.sh  train_oxford_pet.py  train_oxford_pet.sh  train_svhn.py  train_svhn.sh
yolo_checkpoints/: model_config.json  train_config.json
