[tool.poetry]
name = "mini-yolov3"
version = "0.1.0"
description = ""
authors = ["Eric Chen <deeplearningericchen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.17.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.3"
torchmetrics = "^1.3.2"
pycocotools = "^2.0.7"
torch = "^2.2.2"
requests = "^2.31.0"
xmltodict = "^0.13.0"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
